<resources>
    <string name="app_name">IFindYou</string>

    <!-- String related to app -->
    <string name="name">이름</string>
    <string name="rank">계급</string>
    <string name="position">직책</string>
    <string name="status">현 상황</string>
    <string name="intro">소개글</string>
    <string name="phone_number">전화번호</string>
    <string name="unit">소속</string>

    <!-- Strings related to login -->
    <string name="hint_id">아이디</string>
    <string name="hint_password">패스워드</string>
    <string name="sign_in">로그인</string>
    <string name="find_password">비밀번호를 잊어버리셨나요?</string>
    <string name="another_register">또는 가입하기</string>
    <string name="error_invalid_email">유효하지 않은 이메일 주소입니다.</string>
    <string name="error_short_password">비밀번호가 너무 짧습니다.</string>
    <string name="error_incorrect_password">비밀번호가 일치하지 않습니다.</string>
    <string name="error_field_required">필수입력 항목입니다.</string>

    <!-- Strings related to register -->
    <string name="register">가입하기</string>
    <string name="another_login">또는 로그인</string>
    <string name="addition_input">입력해주세요</string>
    <string name="agreement">계정을 생성하시면 저희의 사용 약관 및 개인 정보 보호정책에 동의하는 것입니다.</string>

    <!-- Strings rank -->
    <string name="four_star">대장</string>
    <string name="before_four_star">대장(진)</string>
    <string name="three_star">중장</string>
    <string name="before_three_star">중장(진)</string>
    <string name="two_star">소장</string>
    <string name="before_two_star">소장(진)</string>
    <string name="one_star">준장</string>
    <string name="before_one_star">준장(진)</string>
    <string name="three_bam">대령</string>
    <string name="before_three_bam">대령(진)</string>
    <string name="two_bam">중령</string>
    <string name="before_two_bam">중령(진)</string>
    <string name="one_bam">소령</string>
    <string name="before_one_bam">소령(진)</string>
    <string name="three_dia">대위</string>
    <string name="before_three_dia">대위(진)</string>
    <string name="two_dia">중위</string>
    <string name="before_two_dia">중위(진)</string>
    <string name="one_dia">소위</string>
    <string name="yellow_dia">준위</string>
    <string name="four_staff">원사</string>
    <string name="before_four_staff">원사(진)</string>
    <string name="three_staff">상사</string>
    <string name="before_three_staff">상사(진)</string>
    <string name="two_staff">중사</string>
    <string name="before_two_staff">중사(진)</string>
    <string name="one_staff">하사</string>

    <!-- String related to network -->
    <string name="networkUrl">http://10.53.128.156:5013/</string>
</resources>
