<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_additional_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/name"
            android:textColor="@color/Black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layout_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/text_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/addition_input"
                android:imeActionId="100"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:maxLength="12"
                android:maxLines="1"
                android:textColor="@color/Black"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/Black" />


    <!-- LINE 2 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/rank"
            android:textColor="@color/Black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layout_rank"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/choose_rank"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/rank"
                android:textAlignment="center"></Spinner>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/Black" />


    <!-- LINE 3 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/position"
            android:textColor="@color/Black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layout_position"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/choose_position"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/position"
                android:textAlignment="center"></Spinner>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/Black" />


    <!-- LINE 4 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/unit"
            android:textColor="@color/Black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layout_unit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/choose_unit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/unit"
                android:textAlignment="center"></Spinner>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/Black" />

    <!-- LINE 5 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/intro"
            android:textColor="@color/Black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layout_intro"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/text_intro"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/addition_input"
                android:imeActionId="100"
                android:imeOptions="actionDone"
                android:inputType="textLongMessage"
                android:maxLines="1"
                android:textColor="@color/Black"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/Black" />


    <!-- LINE 6 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/phone_number"
            android:textColor="@color/Black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layout_phone_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/text_phone_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/addition_input"
                android:imeActionId="100"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLength="12"
                android:maxLines="1"
                android:textColor="@color/Black"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/Black" />

    <!-- LINE 7 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/status"
            android:textColor="@color/Black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layout_status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/choose_status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/status"
                android:textAlignment="center"></Spinner>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/Black" />
</LinearLayout>